# UFSC

./: README.md
CourseNode/: README.md
CourseReact/: README.md
EEL5105/: ButtonSync.vhd  FSM_CLK.vhd  FSM_Control.vhd  FSM_pos.vhd  FSM_spd.vhd  README.md  R_ROL.vhd  comparador_B.vhd  comparador_T.vhd  comparador_TIME.vhd  conta_ASC.vhd  conta_desA.vhd  conta_desB.vhd  decod7seg.vhd  map1.vhd  map2.vhd  map3.vhd  map4.vhd  mux_16x1.vhd  mux_2x1_10.vhd  mux_2x1_30.vhd  mux_4x1_30.vhd  mux_4x1_32.vhd  mux_8x1.vhd  (+2 more)
INE5420/t1-sgi/: LICENSE  Makefile  OLD_README.md  README.md  pyproject.toml
INE5420/t1-sgi/app/: __main__.py  clipping.py  config.py  main_window.py  math_functions.py  new_wireframe_window.py  obj_handler.py  transform_window.py  utils.py  wireframe.py
INE5420/t1-sgi/app/qt_designer/: main_window.ui  new_polygon_window.ui  new_wireframe_window.ui  transform_window.ui
INE5420/t1-sgi/tests/: test_clipping.py  test_math_functions.py  test_wireframe.py
INE5426/: Makefile  README.md  pyproject.toml  requirements.txt
INE5426/examples/: bhaskara.ccc  example_error_break.ccc  example_error_var_scope.ccc  example_error_var_type.ccc  exemplo1.ccc  exemplo2.ccc  exemplo3.ccc  geometry.ccc  math.ccc  vinho.ccc
INE5426/src/: run.py
INE5426/src/compiler/: exceptions.py  symbol_table.py
INE5426/src/compiler/gci/: CC20202_gci.py  parser.out  parsetab.py
INE5426/src/compiler/lexer/: CC20202_lexer.py
INE5426/src/compiler/parser/: CC20202_parser.py
INE5426/src/compiler/semantic/: CC20202_semantic.py  parser.out  parsetab.py
INE5426/src/grammar/: ConvCC-2020-2.csf  DEC.csf  DEC.sdd  DEC.sdt  EXPA.csf  EXPA.sdd  EXPA.sdt
INE5426/src/tests/: example.csf  ll1_example.csf  test_check_ll1.py
INE5426/src/utils/: cfg_parser.py  cfg_processor.py  data_structures.py
INE5430/rede_neural/entrega/: README.md  assignment.ipynb  pyproject.toml
TCC/Código/analisador/: README.md  pyproject.toml
TCC/Código/analisador/src/: __main__.py  data.py  factorial2k.py
TCC/Código/analisador/tests/: test_factorial2k.py
TCC/Código/simulador/: README.md  base-agent.txt  pyproject.toml
TCC/Código/simulador/simulation/: __main__.py  analyzer.py  pr_system.py  simulation.py  strings.py  structures.py  utils.py
TCC/Código/simulador/simulation/generator/: perceptions.py  perceptions_options.py
(+1207 files in other folders)
