[tool.poetry]
name = "ine5426"
version = "0.1.0"
description = ""
authors = ["Thiago Sant Helena <thiago.sant.helena@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9"
ply = "^3.11"
pylint = "^2.6.2"
mypy = "^0.800"
bandit = "^1.7.0"
autopep8 = "^1.5.5"
loguru = "^0.5.3"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
