[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["Francisco Vicenzi <cchenzi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.4"
notebook = "^6.1.5"
jupyterlab = "^2.2.9"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
